Revert "Section23: fix @mock cannot create repository obj but fix not success"
This reverts commit 6ed71298df031274956086beb9302bf4470c7ba0.